syntax = "proto3"; 

message Cashflow {
    double interest_amount = 1;
    double principal_amount = 2;
    int64 date = 3;
}

message AccountWithCashflows{ 
    string account_number=1;
    string curr_code=2;
    double intt_rate=3;
    string product_code=4;
    int64 mat_date=5;
    string rate_flag=6;
    string repricing_index=7;
    string psl=8;
    string npa=9;
    string indv_corp_flag=10;
    string customer_type=11;
    string asset_class_id=12;
    string customer_id=13;
    string prod_type=14;
    double final_int_rate=15;
    int64 cost_centre=16;
    string alm_line=17;
    string coa=18;
    string division=19;
    string rep_freq=20;
    int64 next_repricing_date=21;
    int64 last_repricing_date=22;
    string asset_class=23;
    int64 org_date=24;
    string branch=25;
    string al_line=26;
    string balm_l2=27;
    string bmid=28;
    string ia_line=29;
    string scheme_id=30;
    int64 org_tenor=31;
    string weaker_code=32;
    double der_int_rate=33;
    double bnchmrk_rate=34;
    double spread=35;
    string fully_floating_flg=36;
    string gr_ofs_gl=37;
    string accrual_basis=38;
    double accrued_interest=39;
    double current_bal=40;
    int64 due_date=41;
    string interest_pay_freq=42;
    double original_balance=43;
    int64 orig_term=44;
    double emi=45;
    string payment_freq=46;
    string payment_type=47;
    double dpd=48;
    string customer_name=49;
    int64 inst_st_dt=50;
    string weaker=51;
    double current_book_balance=52;
    int64 first_inst_date=53;
    int64 inst_num=54;
    int64 num_inst_paid=55;
    int64 last_inst_date=56;
    double gr_dr=57;
    double gr_cr=58;
    double re_dr=59;
    double re_cr=60;
    double is_dr=61;
    double is_cr=62;
    double ui_dr=63;
    double ui_cr=64;
    string is_ofs_gl=65;
    string re_ofs_gl=66;
    string ui_ofs_gl=67;
    int64 as_on_date=68;
    double A1=69;
    double A2=70;
    double A3=71;
    double A4=72;
    double A5=73;
    int64 A6=74;
    int64 A7=75;
    int64 A8=76;
    int64 A9=77;
    int64 A10=78;
    string A11=79;
    string A12=80;
    string A13=81;
    string A14=82;
    string A15=83;
    string A16=84;
    string A17=85;
    string A18=86;
    string A19=87;
    string A20=88;
    double total_interest_amount=89;
    double total_principal_amount=90;
    repeated Cashflow cashflows=91;
}
