syntax= "proto3";

message Cashflow {
    double interest_amount= 1;
    double principal_amount= 2;
    int64 date= 3;
}

message AccountWithCashflows{
    string acc_no = 1;
    double disbursed_amt = 2;
    double os_loan_bal_lcy = 3;
    double int_rate = 4;
    double ei_amt_crnt = 5;
    string int_type = 6;
    double os_p_bal_due_local_ccy = 7;
    double os_i_bal_due_local_ccy = 8;
    double ei_amt_paid_adv_lcy = 9;
    double pre_ei_bal_lcy = 10;
    int64 acc_open_value_date = 11;
    int64 maturity_date = 12;
    int64 ei_start_date_crnt = 13;
    int64 ei_end_date_crnt = 14;
    string ei_pay_freq_crnt = 15;
    int64 emi_last_paid_date_crnt = 16;
    int64 ei_pay_day = 17;
    int64 ei_orginal_term = 18;
    int64 ei_bal_term = 19;
    string rep_bm = 20;
    string spread = 21;
    int64 last_rep_date = 22;
    int64 next_rep_date = 23;
    int64 rep_freq = 24;
    int64 no_ei_structures = 25;
    string npa_class = 26;
    string remark = 27;
    string months_os_comb = 28;
    string mor_type = 29;
    int64 from_mor_date = 30;
    int64 to_mor_date = 31;
    string recalc_ei_amt_flag = 32;
    string mor_int_calc = 33;
    string bullet_pay_flag = 34;
    string restrct_flag = 35;
    string residential_mortgage = 36;
    string risk_weight = 37;
    string internal_rating = 38;
    string external_rating = 39;
    int64 contractual_tenor = 40;
    int64 residual_tenor = 41;
    string cust_constitution_code = 42;
    string prod_code = 43;
    string p_gl_code = 44;
    string m_npaclass = 45;
    double acrd_int = 46;
    string cust_id = 47;
    string cust_name = 48;
    string group_id = 49;
    string group_name = 50;
    string branch_code = 51;
    string sector = 52;
    string industry = 53;
    string ltv = 54;
    string overdue_acc = 55;
    string excess_acc = 56;
    string loan_type = 57;
    double resid_int = 58;
    string ccy = 59;
    double hdfc_ltd_percent = 60;
    double sec_percent = 61;
    string overdue_type = 62;
    string alm_line = 63;
    string structure_number = 64;
    double memi = 65;
    double ost_bal = 66;
    double roi = 67;
    int64 asondate = 68;
    int64 emi_overdue_gl_cd = 69;
    int64 pre_emi_overdue_gl_cd = 70;
    int64 excess_emi_gl_cd = 71;
    int64 excess_pre_emi_gl_cd = 72;
    double tot_prin_amt = 73;
    double tot_int_amt = 74;
    string balm_l2 = 75;
    string derived_npa_class = 76;
    string common_cust_id = 77;
    int64 derived_next_reprice_date = 78;
    string derived_risk_weight = 79;
    string restructure_flag = 80;
    string resid = 81;
    string ia_line = 82;
    string sma_flag = 83;
    repeated Cashflow cashflows=84;
}
